
# preserve header timestamps to preserve incremental builds across
# projects
nobase_includeHEADERS_INSTALL = $(INSTALL) -D -p -c -m 644

# Should the subdirectory names (mp/GIPS mp/iG729 mp/JB) be in this
# list, or is that just an unintended side effect of how this list
# was generated automatically? (HZM, 20040616)

nobase_include_HEADERS =  \
    mp/DspResampling.h \
    mp/FilterBank.h \
    mp/HandsetFilterBank.h \
    mp/HandsetFilterbankWindows.h \
    mp/MpArrayBuf.h \
    mp/MpAudioAbstract.h \
    mp/MpAudioBuf.h \
    mp/MpAudioDeviceInfo.h \
    mp/MpAudioDriverBase.h \
    mp/MpAudioDriverDefs.h \
    mp/MpAudioDriverFactory.h \
    mp/MpAudioDriverManager.h \
    mp/MpAudioFileDecompress.h \
    mp/MpAudioFileOpen.h \
    mp/MpAudioFileUtils.h \
    mp/MpAudioMixerBase.h \
    mp/MpAudioResource.h \
    mp/MpAudioResourceConstructor.h \
    mp/MpAudioStreamInfo.h \
    mp/MpAudioStreamParameters.h \
    mp/MpAudioUtils.h \
    mp/MpAudioWaveFileRead.h \
    mp/MpBuf.h \
    mp/MpBufPool.h \
    mp/MpBufRecStartResourceMsg.h \
    mp/MpBufferMsg.h \
    mp/MpCallFlowGraph.h \
    mp/MpCodec.h \
    mp/MpCodecFactory.h \
    mp/MpCodecInfo.h \
    mp/MpDataBuf.h \
    mp/MpDecodeBuffer.h \
    mp/MpDecoderBase.h \
    mp/MpDspUtils.h \
    mp/MpDspUtilsSerials.h \
    mp/MpDspUtilsShift.h \
    mp/MpDspUtilsSum.h \
    mp/MpEncoderBase.h \
    mp/MpFlowGraphBase.h \
    mp/MpFlowGraphMsg.h \
    mp/MpFromFileStartResourceMsg.h \
    mp/MpHostAudioApiInfo.h \
    mp/MpJitterBufferBase.h \
    mp/MpJitterBufferDefault.h \
    mp/MpJitterBufferSpeex.h \
    mp/MpMMTimer.h \
    mp/MpMMTimerWnt.h \
    mp/MpMediaTask.h \
    mp/MpMediaTaskHelper.h \
    mp/MpMediaTaskMsg.h \
    mp/MpMisc.h \
    mp/MpNotificationDispatcher.h \
    mp/MpNotificationMsgDef.h \
    mp/MpPlayer.h \
    mp/MpPlayerEvent.h \
    mp/MpPlayerListener.h \
    mp/MpPortAudioDriver.h \
    mp/MpPortAudioMixer.h \
    mp/MpPortAudioStream.h \
    mp/MpQueuePlayerListener.h \
    mp/MpRawAudioBuffer.h \
    mp/MpResNotification.h \
    mp/MpResNotificationMsg.h \
    mp/MpResource.h \
    mp/MpResourceConstructor.h \
    mp/MpResourceFactory.h \
    mp/MpResourceMsg.h \
    mp/MpResourceSortAlg.h \
    mp/MpResourceTopology.h \
    mp/MpRtpBuf.h \
    mp/MpRtpInputAudioConnection.h \
    mp/MpRtpInputConnection.h \
    mp/MpRtpOutputAudioConnection.h \
    mp/MpRtpOutputConnection.h \
    mp/MpSipxDecoders.h \
    mp/MpStreamFeeder.h \
    mp/MpStreamMsg.h \
    mp/MpStreamPlayer.h \
    mp/MpStreamPlaylistPlayer.h \
    mp/MpStreamQueuePlayer.h \
    mp/MpToneResourceMsg.h \
    mp/MpTopologyGraph.h \
    mp/MpTypes.h \
    mp/MpUdpBuf.h \
    mp/MpVolumeMeter.h \
    mp/MpVolumeMeterBase.h \
    mp/MpdIPPG7231.h \
    mp/MpdIPPG729.h \
    mp/MpdPtAVT.h \
    mp/MpdSipxG726.h \
    mp/MpdSipxGSM.h \
    mp/MpdSipxILBC.h \
    mp/MpdSipxPcma.h \
    mp/MpdSipxPcmu.h \
    mp/MpdSipxSpeex.h \
    mp/MpeIPPG7231.h \
    mp/MpeIPPG729.h \
    mp/MpePtAVT.h \
    mp/MpeSipxG726.h \
    mp/MpeSipxGSM.h \
    mp/MpeSipxILBC.h \
    mp/MpeSipxPcma.h \
    mp/MpeSipxPcmu.h \
    mp/MpeSipxSpeex.h \
    mp/MprAudioFrameBuffer.h \
    mp/MprBridge.h \
    mp/MprBridgeConstructor.h \
    mp/MprBridgeSetGainsMsg.h \
    mp/MprBufferRecorder.h \
    mp/MprBufferRecorderConstructor.h \
    mp/MprDecode.h \
    mp/MprDecodeInbandDtmf.h \
    mp/MprDejitter.h \
    mp/MprEchoSuppress.h \
    mp/MprEncode.h \
    mp/MprFromFile.h \
    mp/MprFromFileConstructor.h \
    mp/MprFromMic.h \
    mp/MprFromNet.h \
    mp/MprFromStream.h \
    mp/MprMixer.h \
    mp/MprNull.h \
    mp/MprNullAec.h \
    mp/MprNullAecConstructor.h \
    mp/MprNullConstructor.h \
    mp/MprRecorder.h \
    mp/MprRtpInputAudioConnectionConstructor.h \
    mp/MprRtpOutputAudioConnectionConstructor.h \
    mp/MprRtpStartReceiveMsg.h \
    mp/MprRtpStartSendMsg.h \
    mp/MprSpeexEchoCancel.h \
    mp/MprSpeexPreProcess.h \
    mp/MprSplitter.h \
    mp/MprSplitterConstructor.h \
    mp/MprToNet.h \
    mp/MprToSpkr.h \
    mp/MprToneGen.h \
    mp/MprToneGenConstructor.h \
    mp/NetInTask.h \
    mp/StreamBufferDataSource.h \
    mp/StreamDataSource.h \
    mp/StreamDataSourceListener.h \
    mp/StreamDecoderListener.h \
    mp/StreamDefs.h \
    mp/StreamFileDataSource.h \
    mp/StreamFormatDecoder.h \
    mp/StreamHttpDataSource.h \
    mp/StreamQueueMsg.h \
    mp/StreamQueueingFormatDecoder.h \
    mp/StreamRAWFormatDecoder.h \
    mp/StreamWAVFormatDecoder.h \
    mp/dsplib.h \
    mp/dtmflib.h \
    mp/mpau.h \
    mp/resamplingby2.h \
    rtcp/BaseClass.h \
    rtcp/ByeReport.h \
    rtcp/IBaseClass.h \
    rtcp/IByeReport.h \
    rtcp/IGetByeInfo.h \
    rtcp/IGetReceiverStatistics.h \
    rtcp/IGetSenderStatistics.h \
    rtcp/IGetSrcDescription.h \
    rtcp/INetDispatch.h \
    rtcp/INetworkChannel.h \
    rtcp/INetworkRender.h \
    rtcp/INetworkSource.h \
    rtcp/IRTCPConnection.h \
    rtcp/IRTCPControl.h \
    rtcp/IRTCPHeader.h \
    rtcp/IRTCPNotify.h \
    rtcp/IRTCPRegister.h \
    rtcp/IRTCPRender.h \
    rtcp/IRTCPSession.h \
    rtcp/IRTCPStatistics.h \
    rtcp/IRTPDispatch.h \
    rtcp/IRTPHeader.h \
    rtcp/IReceiverReport.h \
    rtcp/ISDESReport.h \
    rtcp/ISenderReport.h \
    rtcp/ISetReceiverStatistics.h \
    rtcp/ISetSenderStatistics.h \
    rtcp/ISetSrcDescription.h \
    rtcp/Message.h \
    rtcp/MsgQueue.h \
    rtcp/NetworkChannel.h \
    rtcp/RTCManager.h \
    rtcp/RTCPConnection.h \
    rtcp/RTCPHeader.h \
    rtcp/RTCPRender.h \
    rtcp/RTCPSession.h \
    rtcp/RTCPSource.h \
    rtcp/RTCPTimer.h \
    rtcp/RTPHeader.h \
    rtcp/ReceiverReport.h \
    rtcp/RtcpConfig.h \
    rtcp/SenderReport.h \
    rtcp/SourceDescription.h \
    rtcp/TLink.h \
    rtcp/TLinkedList.h
